# Disappearing-Message-System-Design

./: .gitignore  CMakeLists.txt  README.md
DisappearMessagingSystem/: CMakeLists.txt  DisappearMessagingSystem.cpp  DisappearMessagingSystem.h
libs/DelayTopic/: CMakeLists.txt  DelayTopic.cpp
libs/DisappearSystemCommon/: CMakeLists.txt  DisappearSystemCommon.h  Message.h  MessageUtility.h
libs/DisappearSystemCommon/queue/: IMessageQueue.h
